fix custom scrollbar

--- a/src/main/resources/ui/style.css
+++ b/src/main/resources/ui/style.css
@@ -391,16 +391,16 @@ body {
 
 /* Scroll Bar*/
 @media only screen and (min-width: 768px) {
-    ::-webkit-scrollbar {
+    html::-webkit-scrollbar {
         width: 10px;
         height: 1px;
     }
     
-    ::-webkit-scrollbar-thumb {
+    html::-webkit-scrollbar-thumb {
         background: var(--theme-color);
     }
     
-    ::-webkit-scrollbar-track {
+    html::-webkit-scrollbar-track {
         background: var(--bar-color);
     }
 }
